// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Inputs/UserForm Create smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Email",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Email",
      "pressed": undefined,
      "role": "textbox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Name",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Name",
      "pressed": undefined,
      "role": "textbox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Gender",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": true,
      "children": undefined,
      "name": "Male",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Male",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": false,
      "children": undefined,
      "name": "Female",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Female",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Status",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": false,
      "children": undefined,
      "name": "Active",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Active",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": true,
      "children": undefined,
      "name": "Inactive",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Inactive",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Submit",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "user-inputs-userform--create",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`User Inputs/UserForm Update smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Email",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "invalid": "true",
      "name": "Email",
      "pressed": undefined,
      "role": "textbox",
      "value": "Some email",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Name",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Name",
      "pressed": undefined,
      "role": "textbox",
      "value": "Some name",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Gender",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": false,
      "children": undefined,
      "name": "Male",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Male",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": true,
      "children": undefined,
      "name": "Female",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Female",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Status",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": true,
      "children": undefined,
      "name": "Active",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Active",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": false,
      "children": undefined,
      "name": "Inactive",
      "pressed": undefined,
      "role": "radio",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Inactive",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "disabled": true,
      "name": "Submit",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "user-inputs-userform--update",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
